feat: change according to suggestions
